migrate to appNG 2.x